Mobile + liste serveurs + modif css

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -8,10 +8,8 @@
 <body class="dark">
     {{>navbar}}
 
-    <div class="container container-base w-50">
-        <div class="d-flex justify-content-center">
-            {{{body}}}
-        </div>
+    <div class="container container-base w-50 text-center">
+        {{{body}}}
     </div>
 </body>
 
