--- a/src/views/pages/callback.hbs
+++ b/src/views/pages/callback.hbs
@@ -1,1 +1,23 @@
-<h3>{{msg}}</h3>
+<div>
+    <h3>{{msg}}</h3>
+</div>
+
+{{#if servers}}
+<div class="mt-5 mb-3">
+    <h5>Liste de vos serveurs utilisant ce service :</h5>
+</div>
+<div class="container w-50">
+    <table class="table table-striped table-dark text-center">
+        <thead>
+            <th>Serveur(s)</th>
+        </thead>
+        <tbody>
+            {{#each servers}}
+            <tr>
+                <td>{{this}}</td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
+</div>
+{{/if}}
