--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -1,10 +1,12 @@
 <div>
     <h3>Vérification du captcha</h3>
 
-    <form action="{{formURL}}" method="POST">
-        {{{captcha}}}
-        <input type="submit" value="Valider" class="mt-3 btn btn-block blurple" />
-    </form>
+    <div class="d-flex justify-content-center">
+        <form action="{{formURL}}" method="POST">
+            {{{captcha}}}
+            <input type="submit" value="Valider" class="mt-3 btn btn-block blurple" />
+        </form>
+    </div>
 </div>
 
 <script>
